--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'androidx.navigation.safeargs.kotlin'
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
+    id "androidx.navigation.safeargs.kotlin"
+    id "kotlin-parcelize"
 }
 
 android {
-    namespace 'com.example.photoshell'
+    namespace "com.example.photoshell"
     compileSdk 33
 
     defaultConfig {
@@ -17,14 +18,14 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-                appAuthRedirectScheme: 'com.example.photoshell'
+                appAuthRedirectScheme: "com.example.photoshell"
         ]
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
@@ -32,7 +33,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
     }
     buildFeatures {
         viewBinding true
@@ -41,26 +42,26 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "com.google.android.material:material:1.9.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "com.tbuonomo:dotsindicator:4.2"
 
     //Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
 
     // reflection-based flavor
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.6'
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
+    implementation "com.github.kirich1409:viewbindingpropertydelegate:1.5.6"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6"
 
     //viewpager
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     //Moshi
     def moshiVersion = '1.13.0'
@@ -71,20 +72,20 @@ dependencies {
 
 
     //DataStore
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     //circle ImageView
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "de.hdodenhof:circleimageview:3.1.0"
 
     //okhttp
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'org.jetbrains.kotlin:kotlin-android-extensions-runtime:1.5.0'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "org.jetbrains.kotlin:kotlin-android-extensions-runtime:1.5.0"
 
     //appauth
-    implementation 'net.openid:appauth:0.11.1'
-    implementation 'androidx.browser:browser:1.5.0'
+    implementation "net.openid:appauth:0.11.1"
+    implementation "androidx.browser:browser:1.5.0"
 }
