Fixed authorization issue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,20 +37,9 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="oauth2"
-                    android:scheme="com.example.photoshell" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="unsplash.com" android:scheme="https" />
-                <data android:pathPrefix="/photos/" />
+                <data android:host="oauth2" android:scheme="com.example.photoshell" />
             </intent-filter>
         </activity>
         <meta-data
